Fix image scaling on mobile

--- a/src/components/Contentful/sass/sections/_ebooks.scss
+++ b/src/components/Contentful/sass/sections/_ebooks.scss
@@ -42,6 +42,10 @@
       margin-left: 20%;
     }
 
+    img {
+      max-height: max-content;
+    }
+
     &.yellow {
       background: #fecc2b;
 
@@ -55,9 +59,6 @@
 
       @include tablet {
         margin-top: -50px;
-        img {
-          max-height: max-content;
-        }
       }
     }
 
@@ -74,9 +75,6 @@
 
       @include tablet {
         margin-top: 60px;
-        img {
-          max-height: max-content;
-        }
       }
     }
 
@@ -94,9 +92,6 @@
 
       @include tablet {
         margin-top: 60px;
-        img {
-          max-height: max-content;
-        }
       }
     }
 
@@ -114,9 +109,6 @@
 
       @include tablet {
         margin-top: 60px;
-        img {
-          max-height: max-content;
-        }
       }
     }
 
@@ -134,9 +126,6 @@
 
       @include tablet {
         margin-top: 60px;
-        img {
-          max-height: max-content;
-        }
       }
     }
 
